--- a/app/globals.css
+++ b/app/globals.css
@@ -52,6 +52,7 @@ html, body {
 
 
 
+
 .fade-in-out {
   animation: fadeInOut 3s ease-in-out;
 }
@@ -71,10 +72,11 @@ html, body {
   }
 }
 
-.flex {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+
+body, html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black; 
 }
-
-
