--- a/app/globals.css
+++ b/app/globals.css
@@ -73,10 +73,10 @@ html, body {
 }
 
 
-body, html {
+/* body, html {
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
   background-color: black; 
-}
+} */
